# CSCI441

./: README.md
lab00/lab00_clion/lab00a/: CMakeLists.txt  main.cpp
lab00/lab00_clion/lab00b/: CMakeLists.txt  main.cpp
lab02/: CMakeLists.txt  Makefile  README.txt  main.cpp
lab02/include/CSCI441/: objects.hpp
lab03/: CMakeLists.txt  Makefile  README.txt  main.cpp
lab04/: CMakeLists.txt  Makefile  README.txt  main.cpp
lab05/: CMakeLists.txt  Makefile  README.txt  main.cpp
lab05/include/CSCI441/: TextureUtils.hpp
lab08/: CMakeLists.txt  Makefile  README.txt  main.cpp
lab08/include/MD5/: md5model.h
lab08/models/monsters/hellknight/mesh/: hellknight.md5mesh
lab08/src/: md5anim.cpp  md5mesh.cpp
lab09/lab09/: CMakeLists.txt  Makefile  README.txt  main.cpp
lab09/lab09/include/: Shader_Utils.h
lab09/lab09/include/CSCI441/: modelLoader3.hpp
lab09/lab09/shaders/: customShader.f.glsl  customShader.v.glsl
lab10/: CMakeLists.txt  Makefile  main.cpp  readme.txt
lab11/: Makefile  main.cpp  readme.txt
lab12/: CMakeLists.txt  Makefile  README.txt  main.cpp
lab12/shaders/: grayscale.f.glsl
